<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Fragments.HelpFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/grid_spacing_large"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/grid_spacing_large"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/grid_spacing_small"
                android:text="@string/help_parent_title"
                android:textStyle="bold" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/grid_spacing_small"
                android:text="@string/help_parent_para1" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/grid_spacing_small"
                android:text="@string/help_parent_para2" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/grid_spacing_small"
                android:text="@string/help_parent_para3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/grid_spacing_large"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/grid_spacing_small"
                android:text="@string/help_child_title"
                android:textStyle="bold" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/grid_spacing_small"
                android:text="@string/help_child_para1" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/grid_spacing_small"
                android:text="@string/help_child_para2" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/grid_spacing_small"
                android:text="@string/help_child_para3" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/grid_spacing_small"
                android:text="@string/help_child_para4" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>