<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:background="?attr/nav_bar">

    <com.childsafe.auth.Utils.RoundedImageView
        android:id="@+id/personal_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@mipmap/ic_portrait"/>

    <TextView
        android:id="@+id/personal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/hint_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:ellipsize="end"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/personal_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_email"
        android:ellipsize="end"
        android:maxLines="1"/>

</LinearLayout>
