<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="true"
    android:layout_marginLeft="@dimen/grid_spacing_small"
    android:layout_marginTop="@dimen/grid_spacing_small"
    android:layout_marginRight="@dimen/grid_spacing_small"
    android:layout_marginBottom="@dimen/grid_spacing_small">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/child_request_name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/child_name"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="1"
                android:maxLength="20"/>

            <TextView
                android:id="@+id/child_request_email"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/child_email"
                android:ellipsize="end"
                android:maxLines="1"
                android:maxLength="20"/>
        </LinearLayout>


        <Button
            android:id="@+id/accept_request_button"
            style="@style/Widget.ChildSafe.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="@string/accept"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="@dimen/grid_spacing_extra_large"
            android:textColor="@color/safe_green" />

        <Button
            android:id="@+id/decline_request_button"
            style="@style/Widget.ChildSafe.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="@string/decline"
            android:layout_toLeftOf="@+id/accept_request_button"
            android:layout_centerVertical="true"
            android:textColor="@color/lost_red" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>