<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_scroll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/mybackground"
    android:padding="@dimen/grid_spacing_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/grid_spacing_large"
        android:id="@+id/settings_layout">

        <Switch
            android:id="@+id/dark_mode_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:paddingTop="@dimen/grid_spacing_extra_large"
            android:paddingLeft="12dp"
            android:text="@string/dark_mode"
            style="@style/TextAppearance.ChildSafe.Settings"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="24dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/settings_language_title"
                style="@style/TextAppearance.ChildSafe.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                android:paddingTop="@dimen/grid_spacing_extra_large"
                android:paddingLeft="12dp"/>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/language_prompt"
                android:layout_alignParentRight="true"
                android:paddingTop="14dp"
                android:paddingBottom="6dp" />

        </RelativeLayout>


    </LinearLayout>


</ScrollView>