<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_scroll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.EditProfileFragment"
    android:padding="@dimen/grid_spacing_small"
    android:background="?attr/mybackground">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/grid_spacing_large"
    android:orientation="vertical"
    android:paddingTop="@dimen/grid_spacing_extra_large">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:id="@+id/profile_name"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold"
            android:text="@string/hint_name"
            android:ellipsize="end"
            android:maxLines="2"/>

            <TextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:id="@+id/profile_email"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:text="@string/hint_email"
                android:ellipsize="end"
                android:maxLines="2"/>

        </LinearLayout>

        <com.childsafe.auth.Utils.RoundedImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/grid_spacing_large"
            android:layout_marginTop="@dimen/grid_spacing_large"
            android:layout_marginBottom="@dimen/grid_spacing_large"
            android:src="@mipmap/ic_portrait" />

        <ImageView
            android:id="@+id/profile_image_camera"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/grid_spacing_large"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="@dimen/grid_spacing_large"
            android:src="@drawable/ic_camera" />

    </RelativeLayout>

    <View style="@style/Divider"/>

    <TextView
        android:id="@+id/profile_edit_name_title"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/edit_name"
        android:paddingTop="@dimen/grid_spacing_large"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.ChildSafe.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:paddingTop="@dimen/grid_spacing_large">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:padding="@dimen/grid_spacing_large" />

    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/grid_spacing_extra_large">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_cancel_button"
            style="@style/Widget.ChildSafe.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/profile_save_button"
            android:text="@string/cancel" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_save_button"
            style="@style/Widget.ChildSafe.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/save" />


    </RelativeLayout>


</LinearLayout>
</ScrollView>